--- a/data/section-styles/previev.css
+++ b/data/section-styles/previev.css
@@ -20,7 +20,7 @@
     font-size: 32px;
     margin: 0;
     @media (max-width: 600px)  {
-        font-size: small;
+        font-size: 16px;
     }
 }
 
