--- a/data/main.css
+++ b/data/main.css
@@ -57,3 +57,111 @@ body {
     bottom: 0; 
     width: 100%;
 }
+.header-4 {
+    color: #FF6B6B;
+    font-size: 26px;
+    margin: 0;
+    @media (max-width: 600px)  {
+        font-size: 16px;
+    }
+}
+.simple-paragraph{
+    color: #FFFFFF;
+    font-size: 18px;
+    line-height: 1.6;
+    margin-top: 20px;
+}
+.simple-img{
+    object-fit: cover;
+    border-radius:25px;
+    width:350px;
+    height:280px;
+}
+.content_area{
+    background-color: #999999;
+    padding: 15px;
+    border-radius: 15px;
+}
+.recurs-img{
+    border-radius: 15px;
+    width: 100px;
+    height: 100px;
+    object-fit: cover;
+}
+.simple-button{
+    background-color: #FF6B6B;
+    color: #FFFFFF;
+    border: none;
+    padding: 10px 20px;
+    border-radius: 5px;
+    cursor: pointer;
+    font-size: 16px;
+    transition: background-color 0.3s ease;
+}
+.simple-button:hover {
+    background-color: #FF8E8E;
+}
+.order-form{
+    display: flex;
+    flex-direction: column;
+    gap: 15px;
+    align-items: center;
+    margin-top: 20px;
+    padding-left: 20px;
+    padding-right: 20px;
+}
+.simple-form-text{
+    background-color: #3A3A3A;
+    color: #FFFFFF;
+    font-size: 14px;
+    border: none;
+    border-radius: 10px;
+}
+.simple-form-text-area{
+    background-color: #3A3A3A;
+    color: #FFFFFF;
+    font-size: 14px;
+    border: none;
+    border-radius: 10px;
+    height: 200px;
+    width: 100%;
+    padding: 5px 3px 5px 3px;
+}
+@media (max-width: 1150px) {
+    .simple-img {
+        width: 300px;
+        height: 200px;
+    } 
+}
+
+@media (max-width: 1000px) {
+    .simple-img {
+        width: 250px;
+        height: 200px;
+    }
+    .project-card{
+        flex-direction: column;
+        padding: 0 40px;
+        margin: 0 10px;
+    }
+    .Projects-content{
+        margin-top: 20px;
+        margin-bottom: 120px;
+    }
+}
+
+@media (max-width: 810px) {
+    .simple-img{
+        width: 200px;
+        height: 150px;
+    }
+}
+@media (max-width: 680px) {
+    .simple-img{
+        width: 150px;
+        height: 100px;
+    }
+    .main-content_area-img {
+        display: none;
+    }
+}
