--- a/data/main.css
+++ b/data/main.css
@@ -76,6 +76,7 @@ body {
     border-radius:25px;
     width:350px;
     height:280px;
+    background-color: #1E1E1E;
 }
 .content_area{
     background-color: #999999;
@@ -106,9 +107,14 @@ body {
     flex-direction: column;
     gap: 15px;
     align-items: center;
-    margin-top: 20px;
-    padding-left: 20px;
-    padding-right: 20px;
+    margin-top: 70px;
+    max-width: 700px;
+    margin-left: auto;
+    margin-right: auto;
+    background-color:rgb(84, 85, 85);
+    padding: 40px;
+    border: #FF8E8E solid 1px;
+    border-radius: 15px;
 }
 .simple-form-text{
     background-color: #3A3A3A;
@@ -116,6 +122,12 @@ body {
     font-size: 14px;
     border: none;
     border-radius: 10px;
+    min-width: 200px;
+    max-width: 300px;
+    width: 100%;
+    height: 100%;
+    min-height: 30px;
+    padding: 10px;
 }
 .simple-form-text-area{
     background-color: #3A3A3A;
@@ -126,18 +138,36 @@ body {
     height: 200px;
     width: 100%;
     padding: 5px 3px 5px 3px;
+    min-width: 200px;
+    max-width: 300px;
+    width: 100%;
+    height: 100%;
+    min-height: 60px;
+    padding: 10px;
 }
+
+.simple-line{
+    background-color: #FF6B6B;
+    width: 100%;
+    height: 1px;
+    margin: 2px;
+}
+
+.index-link{
+    text-decoration: none;
+}
+
 @media (max-width: 1150px) {
     .simple-img {
         width: 300px;
-        height: 200px;
+        height: auto;
     } 
 }
 
 @media (max-width: 1000px) {
     .simple-img {
         width: 250px;
-        height: 200px;
+        height: auto;
     }
     .project-card{
         flex-direction: column;
@@ -153,13 +183,13 @@ body {
 @media (max-width: 810px) {
     .simple-img{
         width: 200px;
-        height: 150px;
+        height: auto;
     }
 }
 @media (max-width: 680px) {
     .simple-img{
         width: 150px;
-        height: 100px;
+        height: auto;
     }
     .main-content_area-img {
         display: none;
