--- a/data/section-styles/previev.css
+++ b/data/section-styles/previev.css
@@ -66,7 +66,9 @@
 
 .main-content_area-imgs{
     display: flex;
-    justify-content: space-between;
+    justify-content: center;
+    align-items: center;
+    padding-top: 15px;
 }
 .two-column-fraction{
     grid-column: span 2;
@@ -84,8 +86,9 @@
 .main-content_area-img{
     object-fit: cover;
     border-radius:25px;
-    width:350px;
-    height:280px;
+    width: 400px;       /* Ширина (автоматически подберёт высоту) */
+    height: auto;       /* Сохраняет пропорции */
+    object-fit: cover;  /* Обрезает лишнее, если соотношение сторон не совпадает */
 }
 @media (max-width: 1150px) {
     .main-content_area-img {
